--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/predictions.css') }}">
+{% endblock %}
+
 {% block content %}
 <div class="main-content">
     <div class="container">
